<resources>
    <string name="app_name">Self-Care</string>
    <string name="your_password">Your Password</string>
    <string name="don_t_have_an_account_sign_up">Don\'t have an account?</string>
    <string name="already_have_an_account">Already have an account? Sign in</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="password">Password</string>
    <string name="your_name">Your Name</string>
    <string name="todo">TODO</string>
    <string name="name" />
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


    <string name="news_a">Umumnya separation anxiety akan terjadi pada anak bayi hingga usia tiga tahun. Fase tersebut pun wajar terjadi dalam masa pertumbuhan anak. Namun ternyata, fase satu inipun juga bisa terjadi pada orang dewasa, lho. </string>
    <string name="news_b">Ada banyak kesalahpahaman umum tentang mutisme selektif (selective mutism). Mutisme selektif sendiri merupakan gangguan serangan kecemasan yang berlebihan pada anak. Salah satu cirinya adalah anak tidak bisa berbicara dalam lingkungan sosial, padahal biasanya mampu berbicara dengan lancar. Ia memilih untuk tidak berbicara pada situasi atau orang tertentu.</string>
    <string name="news_c">Social Anxiety Disorder merupakan kondisi di mana seseorang mengalami fobia dengan lingkungan sosial. Biasanya mereka cenderung merasa resah, gugup, tidak percaya diri, dan bahkan takut secara berlebihan untuk berinteraksi dengan orang lain atau segala sesuatu yang bersifat sosial dan umum.</string>
    <string name="news_d">Fobia sosial yang dialami pada remaja, ternyata lebih dari sekadar rasa malu dan gugup yang tiba-tiba muncul dan hilang. Kondisi ini merupakan salah satu gangguan psikologis yang rata-rata dialami oleh perempuan remaja</string>
    <string name="news_e">Fobia adalah rasa takut berlebihan terhadap sesuatu yang biasanya tidak membahayakan. Ketakutan tersebut dapat timbul saat menghadapi situasi tertentu, berada suatu tempat, atau saat melihat hewan dan benda tertentu.</string>
    <string name="news_f">Pernahkah kamu mengalami panic attack? Atau justru pernah membantu orang lain mengatasi panic attack? Panic attack atau serangan kecemasan merupakan kondisi yang tak bisa dianggap sepele layaknya serangan panik biasa. Jika dibiarkan begitu saja, panic attack bisa menimbulkan sensasi seperti terlepas dari diri sendiri. </string>
    <string name="news_g">Agoraphobia atau agorafobia adalah rasa takut atau cemas berlebihan pada tempat atau situasi yang membuat penderitanya merasa panik, terperangkap, tidak berdaya, atau malu. Umumnya, agoraphobia timbul ketika penderitanya bepergian atau berada di tempat-tempat publik, terutama yang ramai.</string>
    <string name="news_h">Cemas merupakan suatu bentuk emosi diri Anda yang umumnya diiringi dengan rasa takut dan tidak menyenangkan. Perasaan cemas muncul sebagai respons alami tubuh ketika Anda sedang mengalami stres. Perlu dipahami, bahwa perasaan cemas dan takut merupakan dua hal yang berbeda. Takut dapat ditimbulkan oleh suatu ancaman dan penyebab yang jelas di depan mata Anda. Sementara rasa cemas, timbul atas sesuatu yang mungkin akan terjadi di kemudian hari</string>
    <string name="news_i">This is not an invasion. The cicadas have been here the entire time, quietly feeding off tree roots underground, not asleep, just moving slowly waiting for their body clocks tell them it is time to come out and breed. Sifting through a shovel load of dirt in a suburban backyard, Michael Raupp and Paula Shrewsbury find their quarry: a cicada nymph. And then another. And another. And four more. In maybe a third of a square foot of dirt, the University of Maryland entomologists find at least seven cicadas — a rate just shy of a million per acre. A nearby yard yielded a rate closer to 1.5 million. And there\'s much more afoot. Trillions of the red-eyed black bugs are coming, scientists say. Within days, a couple weeks at most, the cicadas of Brood X (the X is the Roman numeral for 10) will emerge after 17 years underground. There are many broods of periodic cicadas that appear on rigid schedules in different years, but this is one of the largest and most noticeable. They’ll be in 15 states from Indiana to Georgia to New York; they’re coming out now in mass numbers in Tennessee and North Carolina.</string>
    <string name="news_j">This term, the assembly will also see another ‘didi’ in the form of Sreerupa Mitra Chaudhury who is known as Nirbhoy didi for the Nirbhoy Gram campaign While Bengal chief minister Mamata Banerjee is popularly known as didi, another didi has made her way to state assembly this time. Bharatiya Janata Party’s (BJP’s) Sreerupa Mitra Chaudhury, known as Nirbhoy didi, will be joined by legislators from diverse professions and walks of life to make up the state assembly this term. Chaudhury, who is currently being treated for Covid-19 at a Kolkata hospital, won from Englishbazar in Malda district. The 56-year-old woman rights activist was made the chairperson of the special task force on rape, trafficking and violence against women, constituted by the Centre in 2012 after the Nirbhaya case in Delhi. She was also the brain behind the ‘Nirbhoy Gram’, a campaign in Malda district of West Bengal focusing on empowering villages for safety and security of women and children. Then there is award winning Bengali Dalit writer Manoranjan Byapari, who was fielded by the ruling Trinamool Congress. The 65-year-old defeated BJP’s Subhas Chandra Haldar by 5,784 votes at Balagarh in Hooghly district. Born in East Pakistan (now Bangladesh), Bypari’s family migrated to West Bengal when he was three. He even served a jail term for his alleged Naxal links. Raised in refugee camps, the writer never received a formal education.</string>

    <!-- Headings -->
    <string name="head_1">Tak Hanya Anak, Separation Anxiety Juga Terjadi pada Orang Dewasa</string>
    <string name="head_2">5 Mitos tentang Mutisme Selektif</string>
    <string name="head_3">Mengenal Istilah Social Anxiety Disorder, Kondisi Seseorang yang Fobia Sosial</string>
    <string name="head_4">Bullying Bisa Sebabkan Fobia Sosial pada Remaja</string>
    <string name="head_5">Fobia</string>
    <string name="head_6">Menghadapi "Panic Attack" Saat Sendirian </string>
    <string name="head_7">Agoraphobia</string>
    <string name="head_8">Anxiety Disorders: Ketika Cemas Terus Membayangi Diri</string>
    <string name="head_9">Trillions of cicadas set to emerge in the US, here\'s why</string>
    <string name="head_10">Homemaker, economist: Candidates from all walks of life in Bengal assembly</string>

    <!--  Placeholders  -->
    <string name="go_to_next">Go To Next</string>
    <string name="finish">Finish</string>
</resources>