<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#EAEBEE"
    app:layout_constraintVertical_bias="0"
    tools:context=".view.auth.LoginActivity">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:id="@+id/linearlayoutcompact"
        android:layout_height="250dp"
        android:orientation="vertical"
        android:gravity="center"
        android:background="@drawable/bg_header"
        tools:ignore="MissingConstraints">

        <ImageView
            android:layout_width="264dp"
            android:layout_height="280dp"
            android:src="@drawable/delivery_epidemic_food"
            android:contentDescription="@string/todo" />


    </androidx.appcompat.widget.LinearLayoutCompat>


    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@+id/linearlayoutcompact"
        tools:ignore="MissingConstraints,UnknownId"
        tools:layout_editor_absoluteX="25dp">

        <TextView
            android:id="@+id/textname"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="start"
            android:layout_marginLeft="20dp"
            android:text="Name"
            android:textColor="#0b0b0b"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.053"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearlayoutcompact"
            tools:ignore="MissingConstraints" />

        <!--    <com.google.android.material.textfield.TextInputEditText-->
        <!--        android:layout_width="match_parent"-->

        <!--         android:layout_height="wrap_content"-->
        <!--        tools:ignore="MissingConstraints" />-->

        <EditText
            android:id="@+id/edtEmailLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="20dp"
            android:drawableLeft="@drawable/ic_baseline_person_24"
            android:drawablePadding="20dp"
            android:hint="@string/your_name"
            android:minHeight="48dp"
            android:paddingTop="10dp"
            android:paddingBottom="20dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.08"

            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textname" />

        <TextView
            android:id="@+id/textpwd"
            android:layout_width="wrap_content"

            android:layout_marginLeft="20dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:gravity="start"
            android:text="@string/password"
            android:textColor="#757575"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.053"

            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ETname"
            tools:ignore="MissingConstraints" />

        <!--    <com.google.android.material.textfield.TextInputEditText-->
        <!--        android:layout_width="match_parent"-->

        <!--         android:layout_height="wrap_content"-->
        <!--        tools:ignore="MissingConstraints" />-->

        <EditText
            android:id="@+id/edtPasswordLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="20dp"
            android:drawableStart="@drawable/ic_baseline_lock_24"
            android:drawablePadding="20dp"
            android:hint="@string/your_password"
            android:inputType="textPassword"

            android:minHeight="48dp"
            android:paddingTop="10dp"
            android:paddingBottom="20dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.08"

            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textpwd" />

        <TextView
            android:id="@+id/textforgotpwd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:gravity="start"
            android:layout_marginLeft="25dp"
            android:text="@string/forgot_password"
            android:textColor="#8D8D8D"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.067"

            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ETpwd"
            tools:ignore="MissingConstraints" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnLogin"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="40dp"
            android:layout_marginRight="20dp"
            android:background="#FFC700"
            android:text="Login"
            android:textAllCaps="false"
            android:textSize="12sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textforgotpwd" />

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_gravity="center"
        android:gravity="center"
        android:layout_marginTop="20dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/texttext"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_gravity="center"
            android:text="@string/don_t_have_an_account_sign_up"
            android:textColor="#000"

            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.497"

            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/buttonlogin"
            tools:ignore="MissingConstraints" />

        <TextView
            android:id="@+id/textsignup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_gravity="center"
            android:text=" sign up"
            android:textColor="#FF0000"

            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.497"

            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/buttonlogin"
            tools:ignore="MissingConstraints" />

    </androidx.appcompat.widget.LinearLayoutCompat>

<!--        <TextView-->
<!--            android:id="@+id/withoutlogin"-->
<!--            android:layout_width="wrap_content"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:gravity="center"-->
<!--            android:layout_gravity="center"-->
<!--            android:text="Without Login"-->
<!--            android:textColor="#000"-->

<!--            android:textSize="14sp"-->
<!--            app:layout_constraintEnd_toEndOf="parent"-->
<!--            app:layout_constraintHorizontal_bias="0.497"-->

<!--            app:layout_constraintStart_toStartOf="parent"-->
<!--            app:layout_constraintTop_toBottomOf="@+id/buttonlogin"-->
<!--            tools:ignore="MissingConstraints" />-->

    </androidx.appcompat.widget.LinearLayoutCompat>


</androidx.constraintlayout.widget.ConstraintLayout>