<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"

    android:background="#EAEBEE"
    android:layout_height="match_parent"
    tools:context=".SignUpActivity">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:id="@+id/linearlayoutcompact"
        android:layout_height="250dp"
        android:orientation="vertical"
        android:gravity="center"
        android:background="@drawable/bg_header"
        tools:ignore="MissingConstraints">

        <ImageView
            android:layout_width="264dp"
            android:layout_height="280dp"
            android:src="@drawable/delivery_epidemic_food"
            android:contentDescription="@string/todo" />


    </androidx.appcompat.widget.LinearLayoutCompat>


    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@+id/linearlayoutcompact"
        tools:ignore="MissingConstraints,UnknownId"
        tools:layout_editor_absoluteX="206dp">

        <TextView
            android:id="@+id/textname"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:gravity="start"
            android:text="Name"
            android:textColor="#0b0b0b"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.053"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearlayoutcompact"
            tools:ignore="MissingConstraints" />

        <!--    <com.google.android.material.textfield.TextInputEditText-->
        <!--        android:layout_width="match_parent"-->

        <!--         android:layout_height="wrap_content"-->
        <!--        tools:ignore="MissingConstraints" />-->

        <EditText
            android:id="@+id/ETname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="20dp"
            android:drawableLeft="@drawable/ic_baseline_person_24"
            android:drawablePadding="20dp"
            android:hint="@string/your_name"
            android:minHeight="48dp"
            android:paddingTop="10dp"
            android:paddingBottom="20dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.08"

            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textname" />

        <TextView
            android:id="@+id/tvemail"
            android:layout_width="wrap_content"

            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="20dp"
            android:gravity="start"
            android:text="Email"
            android:textColor="#757575"
            android:textSize="14sp"

            tools:ignore="MissingConstraints" />

        <EditText
            android:id="@+id/ETemail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="20dp"
            android:drawableStart="@drawable/ic_baseline_email_24"
            android:drawablePadding="20dp"
            android:hint="Your Email"
            android:inputType="textEmailAddress"

            android:minHeight="48dp"
            android:paddingTop="10dp"
            android:paddingBottom="20dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.08"

            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textpwd" />


        <TextView
            android:id="@+id/tvpwd"
            android:layout_width="wrap_content"

            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="20dp"
            android:gravity="start"
            android:text="@string/password"
            android:textColor="#757575"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.053"

            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ETemail"
            tools:ignore="MissingConstraints" />

        <!--    <com.google.android.material.textfield.TextInputEditText-->
        <!--        android:layout_width="match_parent"-->

        <!--         android:layout_height="wrap_content"-->
        <!--        tools:ignore="MissingConstraints" />-->

        <EditText
            android:id="@+id/ETpwd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="20dp"
            android:drawableStart="@drawable/ic_baseline_lock_24"
            android:drawablePadding="20dp"
            android:hint="@string/your_password"
            android:inputType="textPassword"
            android:minHeight="48dp"
            android:paddingTop="10dp"
            android:paddingBottom="20dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.08"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textpwd" />


        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/buttonlogin"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:background="#FFC700"
            android:text="Sign Up"
            android:textAllCaps="false"
            android:textSize="12sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textforgotpwd" />

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_gravity="center"
            android:gravity="center"

            android:layout_height="wrap_content"
            android:orientation="horizontal">

        <TextView
            android:id="@+id/texttext"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="Have an account? "
            android:textColor="#000"

            android:textSize="14sp"
            tools:ignore="MissingConstraints" />

        <TextView
            android:id="@+id/textlogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="14sp"
            android:text="login"
            android:textColor="#FF0000"


            tools:ignore="MissingConstraints" />

        </androidx.appcompat.widget.LinearLayoutCompat>

    </androidx.appcompat.widget.LinearLayoutCompat>

</androidx.constraintlayout.widget.ConstraintLayout>